Adapt tests to Java 17